tests/errors/maskr_incorrect_bit_size.f90
program maskr_incorrect_bit_size
   print*, maskr(63)
end program
